--- a/html/components/component_button_icon.html
+++ b/html/components/component_button_icon.html
@@ -4,7 +4,7 @@
 <head>
 	<title>자산관리 영업지원 App</title>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
 	<script src="../../assets/plugins/jquery/jquery.min.js"></script>
 
@@ -28,6 +28,7 @@
 	<link rel="stylesheet" href="../../assets/plugins/micromodal/0.4.10/micromodal.css">
 	<script src="../../assets/plugins/micromodal/0.4.10/micromodal.min.js"></script>
 	<!-- sortable -->
+
 	<script src="../../assets/plugins/sortable/1.15.2/Sortable.min.js"></script>
 	<!-- sweetalert2 -->
 	<link rel="stylesheet" href="../../assets/plugins/sweetalert2/11.11.0/sweetalert2.min.css">
@@ -44,6 +45,8 @@
 	<!-- jquery-ui -->
 	<link rel="stylesheet" type="text/css" href="../../assets/plugins/jquery-ui/jquery-ui.css">
 	<script src="../../assets/plugins/jquery-ui/jquery-ui.min.js"></script>
+	<!-- pinch-zoom -->
+	<script src="../../assets/plugins/pinch-zoom/pinch-zoom.umd.js"></script>
 	<!-- //[plugins] -->
 
 	<!-- ui source -->
@@ -93,6 +96,7 @@
 			<h2>Button <span>Noborder</span></h2>
 			<div class="guide-column-list">
 				<button type="button" class="btn-noborder"><i class="ico-order"></i>순서 설정</button>
+				<button type="button" class="btn-noborder btn-noborder-text-shadow px4 py6"><i class="ico-delete-shadow"></i>삭제</button>
 			</div>
 			<h2>Button <span>Border</span></h2>
 			<div class="guide-column-list">
