--- a/html/components/component_card.html
+++ b/html/components/component_card.html
@@ -4,7 +4,7 @@
 <head>
 	<title>자산관리 영업지원 App</title>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
 	<script src="../../assets/plugins/jquery/jquery.min.js"></script>
 
@@ -28,6 +28,7 @@
 	<link rel="stylesheet" href="../../assets/plugins/micromodal/0.4.10/micromodal.css">
 	<script src="../../assets/plugins/micromodal/0.4.10/micromodal.min.js"></script>
 	<!-- sortable -->
+
 	<script src="../../assets/plugins/sortable/1.15.2/Sortable.min.js"></script>
 	<!-- sweetalert2 -->
 	<link rel="stylesheet" href="../../assets/plugins/sweetalert2/11.11.0/sweetalert2.min.css">
@@ -44,6 +45,8 @@
 	<!-- jquery-ui -->
 	<link rel="stylesheet" type="text/css" href="../../assets/plugins/jquery-ui/jquery-ui.css">
 	<script src="../../assets/plugins/jquery-ui/jquery-ui.min.js"></script>
+	<!-- pinch-zoom -->
+	<script src="../../assets/plugins/pinch-zoom/pinch-zoom.umd.js"></script>
 	<!-- //[plugins] -->
 
 	<link rel="stylesheet" href="../../assets/css/ui-fonts.css">
@@ -173,7 +176,44 @@
 				<!-- //business-card-customer -->
 
 			</div>
+
 			<hr>
+
+			<div class="ui-guide-box">
+
+				<!-- upload-picture -->
+				<div class="upload-picture">
+					<div class="upload-type-select">
+						<button type="button" class="upload-gallery">갤러리</button>
+						<button type="button" class="upload-camera">카메라</button>
+					</div>
+				</div>
+				<!-- //upload-picture -->
+
+				<!-- upload-picture -->
+				<div class="upload-picture">
+					<picture>
+						<source srcset="../../assets/images/@temp/@business_card.png">
+						<img src="../../assets/images/@temp/@business_card.png" alt="">
+					</picture>
+					<div class="picture-dimmed">
+						<button type="button" class="btn-noborder btn-noborder-text-shadow px4 py6"><i class="ico-delete-shadow"></i>삭제</button>
+					</div>
+				</div>
+				<!-- //upload-picture -->
+
+				<!-- upload-picture -->
+				<div class="upload-picture">
+					<button type="button" aria-label="이미지 확대보기">
+                        <picture>
+                            <source srcset="../../assets/images/@temp/@business_card.png">
+                            <img src="../../assets/images/@temp/@business_card.png" alt="">
+                        </picture>
+                    </button>
+				</div>
+				<!-- //upload-picture -->
+
+			</div>
 
 		</div>
 	</div>
