--- a/html/components/component_text_items.html
+++ b/html/components/component_text_items.html
@@ -4,7 +4,7 @@
 <head>
 	<title>자산관리 영업지원 App</title>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
 	<script src="../../assets/plugins/jquery/jquery.min.js"></script>
 
@@ -28,6 +28,7 @@
 	<link rel="stylesheet" href="../../assets/plugins/micromodal/0.4.10/micromodal.css">
 	<script src="../../assets/plugins/micromodal/0.4.10/micromodal.min.js"></script>
 	<!-- sortable -->
+
 	<script src="../../assets/plugins/sortable/1.15.2/Sortable.min.js"></script>
 	<!-- sweetalert2 -->
 	<link rel="stylesheet" href="../../assets/plugins/sweetalert2/11.11.0/sweetalert2.min.css">
@@ -44,6 +45,8 @@
 	<!-- jquery-ui -->
 	<link rel="stylesheet" type="text/css" href="../../assets/plugins/jquery-ui/jquery-ui.css">
 	<script src="../../assets/plugins/jquery-ui/jquery-ui.min.js"></script>
+	<!-- pinch-zoom -->
+	<script src="../../assets/plugins/pinch-zoom/pinch-zoom.umd.js"></script>
 	<!-- //[plugins] -->
 
 	<!-- ui source -->
@@ -76,22 +79,23 @@
 		<div class="ui-guide-section">
 			<h2>Description</h2>
 			<div class="ui-guide-box">
-				<p class="description">description</p>
+				<p class="description success">description info</p>
 				<p class="description info">description info</p>
 				<p class="description caution">description caution</p>
+				<p class="description error">description caution</p>
 			</div>
 			<h2>Size</h2>
 			<div class="ui-guide-box">
-				<h3 class="description headline-large">headline-large</h3>
-				<h3 class="description headline-medium">headline-medium</h3>
-				<h3 class="description headline-small">headline-small</h3>
-				<h3 class="description title-large">title-large</h3>
-				<h3 class="description title-medium">title-medium</h3>
-				<h3 class="description title-small">title-small</h3>
-				<p class="description body-xlarge">body-xlarge</p>
-				<p class="description body-large">body-large</p>
-				<p class="description body-medium">body-medium</p>
-				<p class="description body-small">body-small</p>
+				<h3 class="description info headline-large">headline-large</h3>
+				<h3 class="description info headline-medium">headline-medium</h3>
+				<h3 class="description info headline-small">headline-small</h3>
+				<h3 class="description info title-large">title-large</h3>
+				<h3 class="description info title-medium">title-medium</h3>
+				<h3 class="description info title-small">title-small</h3>
+				<p class="description info body-xlarge">body-xlarge</p>
+				<p class="description info body-large">body-large</p>
+				<p class="description info body-medium">body-medium</p>
+				<p class="description info body-small">body-small</p>
 			</div>
 
 
