--- a/assets/css/ui-layout.css
+++ b/assets/css/ui-layout.css
@@ -39,13 +39,13 @@ main {display:flex;flex-direction:column;}
 main .main-inner {flex:1 1 calc(100% - 52px);display:flex;}
 #container {flex:1 1 100%;}
 .content {padding:0 16px;height:100%;flex:1 1 100%;display:flex;flex-direction:column;}
-
+.content-fluid {padding:0;}
 .division-center {flex:1 1 100%;display:flex;justify-content:center;flex-direction:column;}
 
 .modal__content .content.content-fluid > * {margin:0 -16px;}
 
 /* bottom-btn */
-.bottom-btn {position:sticky;width:100%;left:0;bottom:0;background-color:var(--white-100);z-index:calc(var(--header-zIndex) - 100);}
+.bottom-btn {position:sticky;width:100%;left:0;bottom:0;background-color:var(--white-100);z-index:calc(var(--header-zIndex) - 1);}
 
 
 /* btn-wrap */
