--- a/html/components/component_alert.html
+++ b/html/components/component_alert.html
@@ -4,7 +4,7 @@
 <head>
 	<title>자산관리 영업지원 App</title>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
 	<script src="../../assets/plugins/jquery/jquery.min.js"></script>
 
@@ -130,7 +130,7 @@
 				showCancelButton: false,
 				showCloseButton: false,
 				reverseButtons: true,
-				title: '<span class="description body-xlarge fw-500">삭제하시겠습니까?</span>',
+				title: '<span class="description info body-xlarge">삭제하시겠습니까?</span>',
 				confirmButtonText: '예',
 				cancelButtonText: '아니요',
 				customClass: {
