--- a/html/components/component_card.html
+++ b/html/components/component_card.html
@@ -101,10 +101,10 @@
 							<strong class="title-medium">김성민</strong>
 							<div class="company">
 								<span>디지털공통개발부 UI/UX팀</span>
-								<div class="division mx8"></div>
+								<div class="division h12 mx8"></div>
 								<span>과장</span>
 							</div>
-							<div class="body-medium fw-400">파인너츠</div>
+							<div class="company-name">파인너츠</div>
 							<div class="tags tags-small tags-lightBlue">키맨</div>
 						</a>
 						<figure>
@@ -127,11 +127,10 @@
 							<strong class="title-medium">이름</strong>
 							<div class="company">
 								<span>부서명</span>
-								<div class="division mx8"></div>
+								<div class="division h12 mx8"></div>
 								<span>직책</span>
 							</div>
-							<div class="body-medium fw-400">회사명</div>
-
+							<div class="company-name">회사명</div>
 						</a>
 						<figure>
 							<div class="due-date">
@@ -153,11 +152,10 @@
 							<strong class="title-medium">이름</strong>
 							<div class="company">
 								<span>부서명</span>
-								<div class="division mx8"></div>
+								<div class="division h12 mx8"></div>
 								<span>직책</span>
 							</div>
-							<div class="body-medium fw-400">회사명</div>
-
+							<div class="company-name">회사명</div>
 						</a>
 						<figure>
 							<div class="due-date">
@@ -205,11 +203,11 @@
 				<!-- upload-picture -->
 				<div class="upload-picture">
 					<button type="button" aria-label="이미지 확대보기">
-                        <picture>
-                            <source srcset="../../assets/images/@temp/@business_card.png">
-                            <img src="../../assets/images/@temp/@business_card.png" alt="">
-                        </picture>
-                    </button>
+						<picture>
+							<source srcset="../../assets/images/@temp/@business_card.png">
+							<img src="../../assets/images/@temp/@business_card.png" alt="">
+						</picture>
+					</button>
 				</div>
 				<!-- //upload-picture -->
 
