--- a/html/components/component_icon.html
+++ b/html/components/component_icon.html
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
 	<script src="../../assets/plugins/jquery/jquery.min.js"></script>
-<!-- [plugins] -->
+	<!-- [plugins] -->
 	<!-- dropzone -->
 	<link rel="stylesheet" href="../../assets/plugins/dropzone/5.9.3/dropzone.min.css">
 	<script src="../../assets/plugins/dropzone/5.9.3/dropzone.min.js"></script>
@@ -86,6 +86,7 @@
 				<h2>Size</h2>
 				<div class="guide-column-list">
 					<i class="icon-only icon-48">48</i>
+					<i class="icon-only icon-36">36</i>
 					<i class="icon-only icon-32">32</i>
 					<i class="icon-only icon-28">28</i>
 					<i class="icon-only icon-24">24</i>
@@ -99,6 +100,7 @@
 				<h2>icon-info</h2>
 				<div class="guide-column-list">
 					<i class="icon-only icon-48 icon-info bg-icon bg-icon-default"></i>
+					<i class="icon-only icon-36 icon-info bg-icon bg-icon-default"></i>
 					<i class="icon-only icon-32 icon-info bg-icon bg-icon-default"></i>
 					<i class="icon-only icon-28 icon-info bg-icon bg-icon-default"></i>
 					<i class="icon-only icon-24 icon-info bg-icon bg-icon-default"></i>
@@ -112,6 +114,7 @@
 				<h2>icon-caution</h2>
 				<div class="guide-column-list">
 					<i class="icon-only icon-48 icon-caution bg-icon bg-icon-gray_1"></i>
+					<i class="icon-only icon-36 icon-caution bg-icon bg-icon-gray_1"></i>
 					<i class="icon-only icon-32 icon-caution bg-icon bg-icon-gray_1"></i>
 					<i class="icon-only icon-28 icon-caution bg-icon bg-icon-gray_1"></i>
 					<i class="icon-only icon-24 icon-caution bg-icon bg-icon-gray_1"></i>
@@ -125,6 +128,7 @@
 				<h2>icon-camera</h2>
 				<div class="guide-column-list">
 					<i class="icon-only icon-48 icon-camera bg-icon bg-icon-gray_1"></i>
+					<i class="icon-only icon-36 icon-camera bg-icon bg-icon-gray_1"></i>
 					<i class="icon-only icon-32 icon-camera bg-icon bg-icon-gray_1"></i>
 					<i class="icon-only icon-28 icon-camera bg-icon bg-icon-gray_1"></i>
 					<i class="icon-only icon-24 icon-camera bg-icon bg-icon-gray_1"></i>
@@ -133,6 +137,77 @@
 					<i class="icon-only icon-12 icon-camera bg-icon bg-icon-gray_1"></i>
 				</div>
 			</div>
+			<hr>
+			<div class="ui-guide-box">
+				<h2>icon-phone</h2>
+				<div class="guide-column-list">
+					<i class="icon-only icon-48 icon-phone bg-icon bg-status-active"></i>
+					<i class="icon-only icon-36 icon-phone bg-icon bg-status-active"></i>
+					<i class="icon-only icon-32 icon-phone bg-icon bg-status-active"></i>
+					<i class="icon-only icon-28 icon-phone bg-icon bg-status-active"></i>
+					<i class="icon-only icon-24 icon-phone bg-icon bg-status-active"></i>
+					<i class="icon-only icon-20 icon-phone bg-icon bg-status-active"></i>
+					<i class="icon-only icon-14 icon-phone bg-icon bg-status-active"></i>
+					<i class="icon-only icon-12 icon-phone bg-icon bg-status-active"></i>
+				</div>
+			</div>
+			<hr>
+			<div class="ui-guide-box">
+				<h2>icon-sms</h2>
+				<div class="guide-column-list">
+					<i class="icon-only icon-48 icon-sms bg-icon bg-status-active"></i>
+					<i class="icon-only icon-36 icon-sms bg-icon bg-status-active"></i>
+					<i class="icon-only icon-32 icon-sms bg-icon bg-status-active"></i>
+					<i class="icon-only icon-28 icon-sms bg-icon bg-status-active"></i>
+					<i class="icon-only icon-24 icon-sms bg-icon bg-status-active"></i>
+					<i class="icon-only icon-20 icon-sms bg-icon bg-status-active"></i>
+					<i class="icon-only icon-14 icon-sms bg-icon bg-status-active"></i>
+					<i class="icon-only icon-12 icon-sms bg-icon bg-status-active"></i>
+				</div>
+			</div>
+			<hr>
+			<div class="ui-guide-box">
+				<h2>icon-mail</h2>
+				<div class="guide-column-list">
+					<i class="icon-only icon-48 icon-mail bg-icon bg-status-active"></i>
+					<i class="icon-only icon-36 icon-mail bg-icon bg-status-active"></i>
+					<i class="icon-only icon-32 icon-mail bg-icon bg-status-active"></i>
+					<i class="icon-only icon-28 icon-mail bg-icon bg-status-active"></i>
+					<i class="icon-only icon-24 icon-mail bg-icon bg-status-active"></i>
+					<i class="icon-only icon-20 icon-mail bg-icon bg-status-active"></i>
+					<i class="icon-only icon-14 icon-mail bg-icon bg-status-active"></i>
+					<i class="icon-only icon-12 icon-mail bg-icon bg-status-active"></i>
+				</div>
+			</div>
+			<hr>
+			<div class="ui-guide-box">
+				<h2>icon-call</h2>
+				<div class="guide-column-list">
+					<i class="icon-only icon-48 icon-call bg-icon bg-status-active"></i>
+					<i class="icon-only icon-36 icon-call bg-icon bg-status-active"></i>
+					<i class="icon-only icon-32 icon-call bg-icon bg-status-active"></i>
+					<i class="icon-only icon-28 icon-call bg-icon bg-status-active"></i>
+					<i class="icon-only icon-24 icon-call bg-icon bg-status-active"></i>
+					<i class="icon-only icon-20 icon-call bg-icon bg-status-active"></i>
+					<i class="icon-only icon-14 icon-call bg-icon bg-status-active"></i>
+					<i class="icon-only icon-12 icon-call bg-icon bg-status-active"></i>
+				</div>
+			</div>
+			<hr>
+			<div class="ui-guide-box">
+				<h2>icon-memo</h2>
+				<div class="guide-column-list">
+					<i class="icon-only icon-48 icon-memo bg-icon bg-status-active"></i>
+					<i class="icon-only icon-36 icon-memo bg-icon bg-status-active"></i>
+					<i class="icon-only icon-32 icon-memo bg-icon bg-status-active"></i>
+					<i class="icon-only icon-28 icon-memo bg-icon bg-status-active"></i>
+					<i class="icon-only icon-24 icon-memo bg-icon bg-status-active"></i>
+					<i class="icon-only icon-20 icon-memo bg-icon bg-status-active"></i>
+					<i class="icon-only icon-14 icon-memo bg-icon bg-status-active"></i>
+					<i class="icon-only icon-12 icon-memo bg-icon bg-status-active"></i>
+				</div>
+			</div>
+			<hr>
 
 		</div>
 	</div>
