--- a/assets/css/ui-content.css
+++ b/assets/css/ui-content.css
@@ -33,7 +33,7 @@
     -webkit-mask-image:url(../images/ico/ico_sortable_handler.svg);
     mask-image:url(../images/ico/ico_sortable_handler.svg);
 }
-.businesscard-list .list-group-item.sortable-chosen {background-color:var(--background-bg_gray);border-radius:4px;opacity:0.95;border:1px solid var(--status-focused);box-shadow: 0px 1px 0px 0px var(--shadow-gray_3), 0px 2px 4px -1px var(--shadow-gray_3);}
+.businesscard-list .list-group-item.sortable-chosen {background-color:var(--background-bg_gray);border-radius:4px;opacity:0.95;border:1px solid var(--status-focused);box-shadow:0px 1px 0px 0px var(--shadow-gray_3), 0px 2px 4px -1px var(--shadow-gray_3);}
 .businesscard-list .list-group-item.sortable-chosen:after {display:none;}
 .businesscard-list .list-group-item.sortable-chosen .handler {background-color:var(--icon-default);}
 .businesscard-list .list-group-item.sortable-chosen.sortable-ghost {border-color:transparent;}
@@ -44,14 +44,14 @@
 .card-select .inp.inp-large {padding-left:0;}
 .card-select .tags {position:absolute;left:12px;top:10px;z-index:var(--tab-zIndex);}
 .card-select input[type="radio"] {left:auto;right:12px;top:12px;z-index:var(--tab-zIndex);}
-.card-select picture img{width:100%;border-radius:8px;border: 1px solid var(--border-8);opacity: 0.8;background: var(--background-bg_ligthGray);box-shadow: 0px 0.5px 0px 0px var(--shadow-gray_1), 0px 2px 4px -1px var(--shadow-gray_1);}
+.card-select picture img{width:100%;border-radius:8px;border:1px solid var(--border-8);opacity:0.8;background:var(--background-bg_ligthGray);box-shadow:0px 0.5px 0px 0px var(--shadow-gray_1), 0px 2px 4px -1px var(--shadow-gray_1);}
 .card-select input[type="radio"]:checked ~ label picture img {border-color:var(--status-active);}
 
 
 /* sort-wrap */
 .sort-wrap {padding:8px 0;}
 .sort-wrap .sort-list:not(:first-child) {margin-top:12px;}
-.sort-wrap .sort-list {display:flex;align-items:center;justify-content:flex-end;padding:8px 16px;margin-left:auto;border-radius: 24px;border: 1px solid var(--border-8);}
+.sort-wrap .sort-list {display:flex;align-items:center;justify-content:flex-end;padding:8px 16px;margin-left:auto;border-radius:24px;border:1px solid var(--border-8);}
 .sort-wrap .sort-list .filter {display:flex;align-items:center;gap:2px;}
 .sort-wrap .sort-list .filter span {font-size:14px;font-weight:500;color:var(--typography-gray);}
 .sort-wrap .sort-list .sort {display:flex;align-items:center;gap:12px;font-size:14px;font-weight:500;color:var(--typography-gray);}
@@ -92,16 +92,44 @@
 
 /* upload-picture */
 .upload-picture {position:relative;display:flex;align-items:center;justify-content:center;}
-.upload-picture .upload-type-select {display:flex;gap:16px;padding:35px 26px;flex:1;height:53vw;border-radius:8px;border: 1px solid var(--border-8);background: var(--black-56);box-shadow: 0px 0.5px 0px 0px var(--shadow-gray_1), 0px 2px 4px -1px var(--shadow-gray_1);}
+.upload-picture .upload-type-select {display:flex;gap:16px;padding:35px 26px;flex:1;height:53vw;border-radius:8px;border:1px solid var(--border-8);background:var(--black-56);box-shadow:0px 0.5px 0px 0px var(--shadow-gray_1), 0px 2px 4px -1px var(--shadow-gray_1);}
 .upload-picture .upload-type-select button {display:flex;align-items:center;justify-content:center;flex-direction:column;gap:6px;font-size:16px;font-weight:500;color:var(--white-100);line-height:1;height:100%;flex:1;}
 .upload-picture .upload-type-select button:before {content:'';width:48px;flex:0 0 48px;height:48px;}
 .upload-picture .upload-type-select .upload-gallery:before {background:url(../images/common/img_upload_gallery.svg) center center / contain no-repeat;}
 .upload-picture .upload-type-select .upload-camera:before {background:url(../images/common/img_upload_camera.svg) center center / contain no-repeat;}
 .upload-picture picture {flex:1 1 100%;}
-.upload-picture picture img {border-radius:8px;border: 1px solid var(--border-8);width:100%;}
-.upload-picture .picture-dimmed {position:absolute;left:0;top:0;width:100%;height:100%;display:flex;justify-content:flex-end;background: var(--black-16);border-radius:8px;padding:12px 16px;}
+.upload-picture picture img {border-radius:8px;border:1px solid var(--border-8);width:100%;}
+.upload-picture .picture-dimmed {position:absolute;left:0;top:0;width:100%;height:100%;display:flex;justify-content:flex-end;background:var(--black-16);border-radius:8px;padding:12px 16px;}
 .upload-picture .upload-picture-anchor {display:block;width:100%;}
 
 /* pinch-zoom-wrap */
 .pinch-zoom-wrap {display:flex;height:calc(100vh - 96px);}
 .pinch-zoom-container {width:100%!important;}
+
+/* business-card-info */
+.business-card-info {}
+.business-card-info .info-title {}
+.business-card-info .info-title .info-name {display:flex;justify-content:space-between;}
+.business-card-info .info-title .info-name .info-thumb {display:flex;gap:12px;align-items:center;margin:0 4px;}
+.business-card-info .info-title .info-name .tags {margin:0 4px;}
+.business-card-info .info-title .info-company {display:flex;align-items:center;flex-wrap:wrap;margin-top:16px;}
+.business-card-info .info-title .info-company span {font-size:14px;color:var(--typography-caption);line-height:1;}
+
+/* info-detail-list */
+.info-detail-list {border-radius:4px;background:var(--background-bg_lightGray);padding:24px 16px 16px;}
+.info-detail-list .info-table {display:table;width:100%;table-layout:auto;}
+.info-detail-list .info-table .info-body {display:table-row-group}
+.info-detail-list .info-table .info-body .info-row {display:table-row;}
+.info-detail-list .info-table .info-body .info-row .info-th {width:0;white-space:nowrap;padding-left:4px;padding-right:8px;}
+.info-detail-list .info-table .info-body .info-row .info-td {display:table-cell;padding-left:10px;}
+.info-detail-list .info-table .info-body .info-row .info-th,
+.info-detail-list .info-table .info-body .info-row .info-td {display:table-cell;font-size:16px;font-weight:500;color:var(--typography-body);}
+.info-detail-list .info-table .info-body .info-row:not(:last-child) .info-th,
+.info-detail-list .info-table .info-body .info-row:not(:last-child) .info-td {border-bottom:16px solid transparent;}
+
+/* info-anchor */
+.info-anchor {padding:8px 16px 18px;}
+.info-anchor ul {display:flex;justify-content:space-around;gap:auto;}
+.info-anchor ul li {flex:0 1 60px;;}
+.info-anchor ul li button {display:flex;width:100%;flex-direction:column;align-items:center;gap:8px;}
+.info-anchor ul li button span {font-size:12px;color:var(--typography-caption);}
