--- a/assets/css/ui-default.css
+++ b/assets/css/ui-default.css
@@ -109,6 +109,7 @@ body {word-break:break-word;font-size:14px;line-height:1.6;font-family:'Pretenda
 .ellipsis[data-ellipsis="2"] {-webkit-line-clamp:2;}
 .ellipsis[data-ellipsis="3"] {-webkit-line-clamp:3;}
 
+.gap0 {gap:0px!important;}
 .gap1 {gap:1px!important;}
 .gap2 {gap:2px!important;}
 .gap3 {gap:3px!important;}
@@ -142,6 +143,7 @@ body {word-break:break-word;font-size:14px;line-height:1.6;font-family:'Pretenda
 .mt15 {margin-top:15px!important;}
 .mt16 {margin-top:16px!important;}
 .mt20 {margin-top:20px!important;}
+.mt24 {margin-top:24px!important;}
 .mt25 {margin-top:25px!important;}
 .mt30 {margin-top:30px!important;}
 .mt32 {margin-top:32px!important;}
@@ -163,8 +165,10 @@ body {word-break:break-word;font-size:14px;line-height:1.6;font-family:'Pretenda
 .mb15 {margin-bottom:15px!important;}
 .mb16 {margin-bottom:16px!important;}
 .mb20 {margin-bottom:20px!important;}
+.mb24 {margin-bottom:24px!important;}
 .mb25 {margin-bottom:25px!important;}
 .mb30 {margin-bottom:30px!important;}
+.mb32 {margin-bottom:32px!important;}
 .mb35 {margin-bottom:35px!important;}
 .mb40 {margin-bottom:40px!important;}
 .mb45 {margin-bottom:45px!important;}
@@ -181,8 +185,10 @@ body {word-break:break-word;font-size:14px;line-height:1.6;font-family:'Pretenda
 .ml15 {margin-left:15px!important;}
 .ml16 {margin-left:16px!important;}
 .ml20 {margin-left:20px!important;}
+.ml24 {margin-left:24px!important;}
 .ml25 {margin-left:25px!important;}
 .ml30 {margin-left:30px!important;}
+.ml32 {margin-left:32px!important;}
 .ml35 {margin-left:35px!important;}
 .ml40 {margin-left:40px!important;}
 .ml45 {margin-left:45px!important;}
@@ -199,8 +205,10 @@ body {word-break:break-word;font-size:14px;line-height:1.6;font-family:'Pretenda
 .mr15 {margin-right:15px!important;}
 .mr16 {margin-right:16px!important;}
 .mr20 {margin-right:20px!important;}
+.mr24 {margin-right:24px!important;}
 .mr25 {margin-right:25px!important;}
 .mr30 {margin-right:30px!important;}
+.mr32 {margin-right:32px!important;}
 .mr35 {margin-right:35px!important;}
 .mr40 {margin-right:40px!important;}
 .mr45 {margin-right:45px!important;}
@@ -217,8 +225,10 @@ body {word-break:break-word;font-size:14px;line-height:1.6;font-family:'Pretenda
 .m15 {margin:15px!important;}
 .m16 {margin:16px!important;}
 .m20 {margin:20px!important;}
+.m24 {margin:24px!important;}
 .m25 {margin:25px!important;}
 .m30 {margin:30px!important;}
+.m32 {margin:32px!important;}
 .m35 {margin:35px!important;}
 .m40 {margin:40px!important;}
 .m45 {margin:45px!important;}
@@ -237,6 +247,7 @@ body {word-break:break-word;font-size:14px;line-height:1.6;font-family:'Pretenda
 .my24 {margin-top:24px!important;margin-bottom:24px!important;}
 .my25 {margin-top:25px!important;margin-bottom:25px!important;}
 .my30 {margin-top:30px!important;margin-bottom:30px!important;}
+.my32 {margin-top:32px!important;margin-bottom:32px!important;}
 .my35 {margin-top:35px!important;margin-bottom:35px!important;}
 .my40 {margin-top:40px!important;margin-bottom:40px!important;}
 .my45 {margin-top:45px!important;margin-bottom:45px!important;}
@@ -255,12 +266,14 @@ body {word-break:break-word;font-size:14px;line-height:1.6;font-family:'Pretenda
 .mx24 {margin-left:24px!important;margin-right:24px!important;}
 .mx25 {margin-left:25px!important;margin-right:25px!important;}
 .mx30 {margin-left:30px!important;margin-right:30px!important;}
+.mx32 {margin-left:32px!important;margin-right:32px!important;}
 .mx35 {margin-left:35px!important;margin-right:35px!important;}
 .mx40 {margin-left:40px!important;margin-right:40px!important;}
 .mx45 {margin-left:45px!important;margin-right:45px!important;}
 .mx50 {margin-left:50px!important;margin-right:50px!important;}
 .mx70 {margin-left:70px!important;margin-right:70px!important;}
 .mx100 {margin-left:100px!important;margin-right:100px!important;}
+
 .pt0 {padding-top:0px!important;}
 .pt5 {padding-top:5px!important;}
 .pt8 {padding-top:8px!important;}
@@ -272,6 +285,7 @@ body {word-break:break-word;font-size:14px;line-height:1.6;font-family:'Pretenda
 .pt24 {padding-top:24px!important;}
 .pt25 {padding-top:25px!important;}
 .pt30 {padding-top:30px!important;}
+.pt32 {padding-top:32px!important;}
 .pt35 {padding-top:35px!important;}
 .pt40 {padding-top:40px!important;}
 .pt45 {padding-top:45px!important;}
@@ -287,9 +301,10 @@ body {word-break:break-word;font-size:14px;line-height:1.6;font-family:'Pretenda
 .pb15 {padding-bottom:15px!important;}
 .pb16 {padding-bottom:16px!important;}
 .pb20 {padding-bottom:20px!important;}
-.pb25 {padding-bottom:25px!important;}
 .pb24 {padding-bottom:24px!important;}
+.pb25 {padding-bottom:25px!important;}
 .pb30 {padding-bottom:30px!important;}
+.pb32 {padding-bottom:32px!important;}
 .pb35 {padding-bottom:35px!important;}
 .pb40 {padding-bottom:40px!important;}
 .pb45 {padding-bottom:45px!important;}
@@ -305,9 +320,10 @@ body {word-break:break-word;font-size:14px;line-height:1.6;font-family:'Pretenda
 .pl15 {padding-left:15px!important;}
 .pl16 {padding-left:16px!important;}
 .pl20 {padding-left:20px!important;}
-.pl25 {padding-left:25px!important;}
 .pl24 {padding-left:24px!important;}
+.pl25 {padding-left:25px!important;}
 .pl30 {padding-left:30px!important;}
+.pl32 {padding-left:32px!important;}
 .pl35 {padding-left:35px!important;}
 .pl40 {padding-left:40px!important;}
 .pl45 {padding-left:45px!important;}
@@ -323,9 +339,10 @@ body {word-break:break-word;font-size:14px;line-height:1.6;font-family:'Pretenda
 .pr15 {padding-right:15px!important;}
 .pr16 {padding-right:16px!important;}
 .pr20 {padding-right:20px!important;}
-.pr25 {padding-right:25px!important;}
 .pr24 {padding-right:24px!important;}
+.pr25 {padding-right:25px!important;}
 .pr30 {padding-right:30px!important;}
+.pr32 {padding-right:32px!important;}
 .pr35 {padding-right:35px!important;}
 .pr40 {padding-right:40px!important;}
 .pr45 {padding-right:45px!important;}
@@ -344,6 +361,7 @@ body {word-break:break-word;font-size:14px;line-height:1.6;font-family:'Pretenda
 .p24 {padding:24px!important;}
 .p25 {padding:25px!important;}
 .p30 {padding:30px!important;}
+.p32 {padding:32px!important;}
 .p35 {padding:35px!important;}
 .p40 {padding:40px!important;}
 .p45 {padding:45px!important;}
@@ -365,6 +383,7 @@ body {word-break:break-word;font-size:14px;line-height:1.6;font-family:'Pretenda
 .py24 {padding-top:24px!important;padding-bottom:24px!important;}
 .py25 {padding-top:25px!important;padding-bottom:25px!important;}
 .py30 {padding-top:30px!important;padding-bottom:30px!important;}
+.py32 {padding-top:32px!important;padding-bottom:32px!important;}
 .py35 {padding-top:35px!important;padding-bottom:35px!important;}
 .py40 {padding-top:40px!important;padding-bottom:40px!important;}
 .py45 {padding-top:45px!important;padding-bottom:45px!important;}
@@ -385,6 +404,7 @@ body {word-break:break-word;font-size:14px;line-height:1.6;font-family:'Pretenda
 .px24 {padding-left:24px!important;padding-right:24px!important;}
 .px25 {padding-left:25px!important;padding-right:25px!important;}
 .px30 {padding-left:30px!important;padding-right:30px!important;}
+.px32 {padding-left:32px!important;padding-right:32px!important;}
 .px35 {padding-left:35px!important;padding-right:35px!important;}
 .px40 {padding-left:40px!important;padding-right:40px!important;}
 .px45 {padding-left:45px!important;padding-right:45px!important;}
