--- a/assets/css/ui-layout.css
+++ b/assets/css/ui-layout.css
@@ -52,6 +52,7 @@ main .main-inner {flex:1 1 calc(100% - 52px);display:flex;}
 .btn-wrap > *:only-child {flex:1 1 100%;}
 .btn-wrap > * {flex:1;}
 .btn-wrap .btn-secondary {flex:0 1 100px;}
+.content .btn-wrap {padding:16px 0;}
 
 /* select-option */
 .select-option {}
