--- a/html/components/component_list.html
+++ b/html/components/component_list.html
@@ -86,6 +86,72 @@
 					</div>
 				</div>
 			</div>
+			<hr>
+			<div class="ui-guide-box">
+				<h2>business-card-info</h2>
+				<!-- business-card-info -->
+				<div class="business-card-info mt40">
+					<div class="info-title">
+						<div class="info-name">
+							<div class="info-thumb">
+								<picture>
+									<source srcset="../../assets/images/ico/ico_profile.svg">
+									<img src="../../assets/images/ico/ico_profile.svg" alt="">
+								</picture>
+								<strong class="headline-small">나고객</strong>
+							</div>
+							<div class="tags tags-medium tags-lightBlue">키맨</div>
+						</div>
+						<div class="divide-list mt16">
+							<span>부서명</span>
+							<div class="division h12 mx8"></div>
+							<span>부서명</span>
+						</div>
+					</div>
+					<div class="info-detail-list mt24">
+						<div class="info-table">
+							<div class="info-body">
+								<div class="info-row">
+									<div class="info-th">회사</div>
+									<div class="info-td">
+										<div class="group gap10 py0">
+											회사이름
+											<a href="#" class="anchor chevron fs-14">기업조회</a>
+										</div>
+									</div>
+								</div>
+								<div class="info-row">
+									<div class="info-th">휴대폰</div>
+									<div class="info-td">010-****-5736</div>
+								</div>
+								<div class="info-row">
+									<div class="info-th">이메일</div>
+									<div class="info-td">**c@a**.com</div>
+								</div>
+								<div class="info-row">
+									<div class="info-th">전화번호</div>
+									<div class="info-td">02-****-5678</div>
+								</div>
+								<div class="info-row">
+									<div class="info-th">팩스번호</div>
+									<div class="info-td">02-****-4321</div>
+								</div>
+							</div>
+						</div>
+					</div>
+
+				</div>
+				<!-- //business-card-info -->
+			</div>
+			<div class="ui-guide-box">
+				<h2>divide-list</h2>
+				<div class="divide-list">
+					<span>부서명</span>
+					<div class="division h12 mx8"></div>
+					<span>부서명</span>
+				</div>
+			</div>
+			<hr>
 		</div>
 	</div>
 
