--- a/html/components/component_input_text.html
+++ b/html/components/component_input_text.html
@@ -153,6 +153,17 @@
 						</div>
 					</dd>
 				</dl>
+				<dl>
+					<dt>password</dt>
+					<dd>
+						<div class="form">
+							<div class="input-wrap input-btn">
+								<input type="password" placeholder="Placeholder" value="Text">
+								<button type="button" class="input-password" aria-label="비밀번호 표시"></button>
+							</div>
+						</div>
+					</dd>
+				</dl>
 			</div>
 		</div>
 
