--- a/html/components/component_term.html
+++ b/html/components/component_term.html
@@ -7,7 +7,6 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
 	<script src="../../assets/plugins/jquery/jquery.min.js"></script>
-
 	<!-- [plugins] -->
 	<!-- dropzone -->
 	<link rel="stylesheet" href="../../assets/plugins/dropzone/5.9.3/dropzone.min.css">
@@ -62,114 +61,51 @@
 	<script src="../../assets/js/ui-temp.js"></script> <!-- 개발서버에서 include 제외해주세요 -->
 	<!-- //ui source -->
 
+	<style>
+		.ui-guide .guide-column-list {
+			display: flex;
+			flex-direction: row;
+		}
+	</style>
 </head>
 
 <body>
 	<div class="ui-guide">
-		<h1>Form</h1>
-		<p>Checkbox</p>
+		<h1>Alert</h1>
+		<p>Modal Popup</p>
 
 		<div class="ui-guide-section">
 			<div class="ui-guide-box">
-				<h2>Large</h2>
-				<dl>
-					<dt></dt>
-					<dd>
-						<div class="inp-column-list">
-							<div class="inp inp-large">
-								<label>
-									<input type="checkbox">
-									<span class="label-title">텍스트를 입력해주세요</span>
-								</label>
-							</div>
-							<div class="stroke my16"></div>
-							<div class="inp inp-large">
-								<label>
-									<input type="checkbox">
-									<span class="label-title">텍스트를 입력해주세요</span>
-									<span class="label-subtitle">서브텍스트를 입력해주세요</span>
-								</label>
-							</div>
-							<div class="stroke my16"></div>
-							<div class="inp inp-large">
-								<label>
-									<input type="checkbox">
-									<span class="label-title">텍스트를 입력해주세요 텍스트를 입력해주세요 텍스트를 입력해주세요</span>
-									<span class="label-subtitle">서브텍스트를 입력해주세요 서브텍스트를 입력해주세요 서브텍스트를 입력해주세요</span>
-								</label>
-							</div>
-						</div>
-					</dd>
-				</dl>
+				<div class="inp-check-all">
+					<div class="inp inp-small">
+						<label>
+							<input type="checkbox">
+							<span class="label-title">텍스트를 입력해주세요 텍스트를 입력해주세요 텍스트를 입력해주세요 텍스트를 입력해주세요</span>
+						</label>
+					</div>
+				</div>
+				<div class="inp-column-list mt8">
+					<div class="inp inp-medium">
+						<label>
+							<input type="checkbox">
+							<span class="label-title">서비스 이용 약관</span>
+						</label>
+					</div>
+					<div class="stroke my16"></div>
+					<div class="inp inp-medium">
+						<label>
+							<input type="checkbox">
+							<span class="label-title">App-Push 이용 동의</span>
+						</label>
+					</div>
+				</div>
 			</div>
 			<hr>
-			<div class="ui-guide-box">
-				<h2>Medium</h2>
-				<dl>
-					<dt></dt>
-					<dd>
-						<div class="inp-column-list">
-							<div class="inp inp-medium">
-								<label>
-									<input type="checkbox">
-									<span class="label-title">텍스트를 입력해주세요</span>
-								</label>
-							</div>
-							<div class="stroke my16"></div>
-							<div class="inp inp-medium">
-								<label>
-									<input type="checkbox">
-									<span class="label-title">텍스트를 입력해주세요</span>
-									<span class="label-subtitle">서브텍스트를 입력해주세요</span>
-								</label>
-							</div>
-							<div class="stroke my16"></div>
-							<div class="inp inp-medium">
-								<label>
-									<input type="checkbox">
-									<span class="label-title">텍스트를 입력해주세요 텍스트를 입력해주세요 텍스트를 입력해주세요</span>
-									<span class="label-subtitle">서브텍스트를 입력해주세요 서브텍스트를 입력해주세요 서브텍스트를 입력해주세요</span>
-								</label>
-							</div>
-						</div>
-					</dd>
-				</dl>
-			</div>
-		</div>
-		<hr>
-		<div class="ui-guide-box">
-			<h2>Small</h2>
-			<dl>
-				<dt></dt>
-				<dd>
-					<div class="inp-column-list">
-						<div class="inp inp-small">
-							<label>
-								<input type="checkbox">
-								<span class="label-title">텍스트를 입력해주세요</span>
-							</label>
-							<a href="#" class="chevron-only" aria-label="상세 내용 보기"></a>
-						</div>
-						<div class="stroke my16"></div>
-						<div class="inp inp-small">
-							<label>
-								<input type="checkbox">
-								<span class="label-title">텍스트를 입력해주세요 텍스트를 입력해주세요 텍스트를 입력해주세요 텍스트를 입력해주세요</span>
-							</label>
-							<a href="#" class="chevron-only" aria-label="상세 내용 보기"></a>
-						</div>
-						<div class="stroke my16"></div>
-						<div class="inp inp-small">
-							<label>
-								<input type="checkbox">
-								<span class="label-title">텍스트를 입력해주세요</span>
-							</label>
-						</div>
-					</div>
-				</dd>
-			</dl>
+
+
 		</div>
 	</div>
 </body>
+
 
 </html>
