--- a/assets/css/ui-plugins.css
+++ b/assets/css/ui-plugins.css
@@ -2,7 +2,9 @@
 
 
 /* sweetalert2 */
+div:where(.swal2-container) {left:0;top:0;width:100%;}
 div:where(.swal2-container) div:where(.swal2-popup) {width:calc(100vw - 72px);border-radius:8px;padding-bottom:0;overflow:hidden;}
+
 
 div:where(.swal2-container) h2:where(.swal2-title) {font-size:18px;color:var(--typography-title);text-align:left;padding:24px 24px 8px;font-weight:500;}
 div:where(.swal2-container) .swal2-html-container {margin:16px 24px 0;}
@@ -29,7 +31,7 @@ div:where(.swal2-container) button:where(.swal2-close):hover {}
 .modal__container {padding:0;max-width:none;max-height: calc(100% - 40px);flex:1 1 100%;background-color:var(--white-100);border-radius:20px 20px 0 0;display:flex;flex-direction:column;}
 .modal__content {margin:0;line-height:inherit;color:inherit;padding:0;border-radius:0;flex:1 1 calc(100% - 56px);overflow-y:auto;}
 
-.modal__header {position:sticky;top:0;left:0;width:100%;padding:14.5px 16px;background-color:var(--white-100);}
+.modal__header {position:sticky;top:0;left:0;width:100%;padding:14.5px 16px;background-color:var(--white-100);border-radius:20px 20px 0 0;}
 .modal__header__alert {padding:24px 24px 8px;min-height:40px;gap:10px;}
 .modal__header .modal__title {flex:1 1 100%;display:flex;justify-content:center;}
 .modal__header .modal__close {position:absolute;right:0;top:0;width:24px;height:24px;padding:14.5px 16px;display:flex;align-items:center;justify-content:center;box-sizing:content-box;}
